--- a/part7/blogapp/frontend/package.json
+++ b/part7/blogapp/frontend/package.json
@@ -13,8 +13,10 @@
   "dependencies": {
     "@reduxjs/toolkit": "^2.5.1",
     "axios": "^1.7.9",
+    "bootstrap": "^5.3.5",
     "prop-types": "^15.8.1",
     "react": "^18.3.1",
+    "react-bootstrap": "^2.10.9",
     "react-dom": "^18.3.1",
     "react-redux": "^9.2.0",
     "react-router-dom": "^6.30.0",
