--- a/part8/library-GraphQL-backend/package.json
+++ b/part8/library-GraphQL-backend/package.json
@@ -12,7 +12,10 @@
   "description": "",
   "dependencies": {
     "@apollo/server": "^4.12.0",
-    "graphql": "^16.10.0"
+    "dotenv": "^16.5.0",
+    "graphql": "^16.10.0",
+    "mongoose": "^8.13.2",
+    "mongoose-unique-validator": "^4.0.1"
   },
   "devDependencies": {
     "nodemon": "^3.1.9"
