--- a/part8/library-GraphQL-backend/package.json
+++ b/part8/library-GraphQL-backend/package.json
@@ -14,6 +14,7 @@
     "@apollo/server": "^4.12.0",
     "dotenv": "^16.5.0",
     "graphql": "^16.10.0",
+    "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.13.2",
     "mongoose-unique-validator": "^4.0.1"
   },
