--- a/part8/library-GraphQL-backend/package.json
+++ b/part8/library-GraphQL-backend/package.json
@@ -12,11 +12,17 @@
   "description": "",
   "dependencies": {
     "@apollo/server": "^4.12.0",
+    "@graphql-tools/schema": "^10.0.23",
+    "cors": "^2.8.5",
     "dotenv": "^16.5.0",
+    "express": "^5.1.0",
     "graphql": "^16.10.0",
+    "graphql-subscriptions": "^3.0.0",
+    "graphql-ws": "^5.16.2",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.13.2",
-    "mongoose-unique-validator": "^4.0.1"
+    "mongoose-unique-validator": "^4.0.1",
+    "ws": "^8.18.1"
   },
   "devDependencies": {
     "nodemon": "^3.1.9"
